Translate binary to decimal and back

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /MortgageCalc/build/
 /Exchange/nbproject/private/
 /Exchange/build/
+/TranslationOfNumberSystems/nbproject/private/
+/TranslationOfNumberSystems/build/
