--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Exchange/build/
 /TranslationOfNumberSystems/nbproject/private/
 /TranslationOfNumberSystems/build/
+/Calculator/nbproject/private/
+/Calculator/build/
