--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /TranslationOfNumberSystems/build/
 /Calculator/nbproject/private/
 /Calculator/build/
+/Converter/nbproject/private/
+/Converter/build/
